@@ -4691,26 +4691,6 @@ argument_list|,
 name|queryTerm
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|Math
-operator|.
-name|min
-argument_list|(
-name|queryTerm
-operator|.
-name|length
-argument_list|()
-argument_list|,
-name|term
-operator|.
-name|length
-argument_list|()
-argument_list|)
-operator|>
-name|ed
-condition|)
-block|{
 name|float
 name|score
 init|=
@@ -4765,7 +4745,6 @@ expr_stmt|;
 name|ed
 operator|++
 expr_stmt|;
-block|}
 block|}
 block|}
 for|for
