@@ -602,6 +602,22 @@ name|termsEnum
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"AssertingTerms("
+operator|+
+name|in
+operator|+
+literal|")"
+return|;
+block|}
 block|}
 DECL|field|SEEK_EXACT
 specifier|static
